# imessage-archiver

./: .gitignore  CLAUDE.md  README.md  SPEC.md  main.py  pyproject.toml
scripts/: archive.py  run_milestone1.py  run_milestone2.py
src/imessage_archiver/: attachments.py  attributed_body.py  cli.py  config.py  contacts.py  copy_dbs.py  extract.py  render.py  validate.py
