[project]
name = "imessage-archiver"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "tqdm>=4.67.3",
]

[project.scripts]
archive = "imessage_archiver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imessage_archiver"]
